tests/invalid/struct-with-method-wrong-indent.nyx
struct Matrix:
    rows: i32
    cols: i32
     data: [][]f64
    fn Matrix::new(r: i32, c: i32) -> Matrix:
        pass
